fix overflow code block

--- a/src/components/CodeBlock/CodeBlock.module.css
+++ b/src/components/CodeBlock/CodeBlock.module.css
@@ -3,8 +3,5 @@
   padding: 1.5rem;
   border-radius: 8px;
   border-left: 2px solid #0008ff;
-}
-
-.codeBlock code {
   overflow: auto;
 }
